k8s/apps/em-fyksen-me/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"  # Correct placement of the ingressClassName
  rules:
  - host: "em.fyksen.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  tls:
  - hosts:
    - "em.fyksen.me"
    secretName: em-fyksen-me-tls
